src/test/deca/context/invalid/class19.deca
class Object{
    int a;
} 
{
    Object obj;
}